# robosla-agent

./: build-and-publish.sh  cookies.go  dfa-downlink.go  downlink.go  executor.go  main.go  mmwave.go  raspistill.go  realsense.go  robosla-agent.json  shell.go  snapshot.go  uplink.go  ur3.go  virtual.go
gcode/: gcode.go  gcode_test.go
pkg/mmwave/: mmwave.go
pkg/ur/: rtde.go
testdata/: homing.gcode  moves.gcode  simple.gcode
tools/fbi/: main.go
tools/mmwave-reader/: main.go
tools/realsense/: CMakeLists.txt  realsense-snapshot.cc
tools/snapshots-loop/: main.go
tools/ur3-random-moves/: main.go
tools/ur3-realtime-data-exchange-exp/: main.go
